Fix design on mobile devices

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -2,3 +2,7 @@
 #_navbar{
 display: none;
 }
+@media (max-width : 1000px) {
+#_navbar{
+display: none;
+}
